Adição do header com os efeitos sublinhado premium na nav

--- a/index.html
+++ b/index.html
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+    <link rel="stylesheet" href="css/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Supplements fitness - Landing Page</title>
 </head>
 <body>
-    
+    <section class="header-section">
+        <div class="header-conteiner">
+            <header class="header-content">
+                <h1 class="header-title">
+                    Vorax Suplementos
+                </h1>
+                    <nav class="navigation-header">
+                        <a href="#">Github</a>
+                        <a href="#">Contato</a>
+                        <a href="#">Linkedin</a>
+                    </nav>
+            </header>
+        </div>
+    </section>
 </body>
 </html>
